fix: abbr underline in links should remain visible on hover

--- a/src/scss/_elements.scss
+++ b/src/scss/_elements.scss
@@ -93,4 +93,8 @@ li {
 
 abbr {
   text-decoration-color: var(--secondary);
+
+  a:hover & {
+    text-decoration-color: var(--light);
+  }
 }
